--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nypremiär Mannen från Mallorca</title>
+    <title>Mannen från Mallorca</title>
 </head>
-<body>
+<!-- <body background="mannen_background.jpg"> -->
+<!-- <body bgcolor="#e3e3e3"> -->
+
     <header class="header">
         <img 
             src="mannen-800w.jpg"
@@ -15,10 +17,10 @@
     </header>
 
     <h2>
-        Mannen från Mallorca  - nypremiär
+        Mannen från Mallorca  - Nypremiär
     </h2>
 
-    <p>Ett kallhamrat rån utförs i Stockholm på Luciadagaen mot ett proppfullt postkontor på Dalagatan. Kriminalinspektörerna Jarnebring och Johansson är först på plats och försöker fånga rånaren, men han undkommer. Bevisen pekar mot en medlem av eliten inom säkerhetspolisen.</p>
+    <p >Ett kallhamrat rån utförs i Stockholm på Luciadagaen mot ett proppfullt postkontor på Dalagatan. Kriminalinspektörerna Jarnebring och Johansson är först på plats och försöker fånga rånaren, men han undkommer. Bevisen pekar mot en medlem av eliten inom säkerhetspolisen.</p>
 
     <table>
         <tr><td>REGI: Bo Widerberg</td></tr>
@@ -28,9 +30,9 @@
     </table>
     <br>
     <iframe 
-        width="560" height="315" src="https://www.youtube.com/embed/w2L9hEKn3f0?si=vt69LKMnT9vmH-Oh" 
+        width="300" height="169" src="https://www.youtube.com/embed/w2L9hEKn3f0?si=vt69LKMnT9vmH-Oh" 
         
-        title="YouTube video player" frameborder="0" 
+        title="YouTube video player" 
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
     </iframe>
